--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      Unlike "/favicon2.ico" or "favicon2.ico", "%PUBLIC_URL%/favicon2.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Ellaine Chan</title>
   </head>
   <body>
     <noscript>
